created user show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1>PROFILE</h1>
+
+<p>picture</p>
+
+<p>name: <%= current_user.name %></p>
+
+<p>id: <%= current_user.id %></p>
