check link navigation is working fine

--- a/app/views/armored_cars/show.html.erb
+++ b/app/views/armored_cars/show.html.erb
@@ -1,9 +1,5 @@
-<h1><%= @armored_car.model %></h1>
-<h2><%= @armored_car.price_cents %></h2>
-<p><%= @armored_car.detailes %></p>
+<h1><%= @armored_car.inspect %></h1>
 
-
-  <%= link_to 'Edit', edit_armored_car_path(@armored_car) %> |
+  <%= link_to 'Edit', edit_armored_car_path %>
   <%= link_to 'Back', armored_cars_path %>
-
 
