--- a/app/views/armored_cars/edit.html.erb
+++ b/app/views/armored_cars/edit.html.erb
@@ -1,4 +1,12 @@
 
 <h1>EDIT ARMORED-CARS</h1>
 <%= @car.inspect %>
+<%= simple_form_for [@armored_car] do |form| %>
+  <%= form.input :model %>
+  <%= form.input :detailes %>
+  <%= form.input :price_cents %>
+  <%= form.button :submit, class: "btn-primary" %>
+<% end %>
+<%= link_to 'Back', armored_cars_path %>
+
 
