all cars fixed missing correct links

--- a/app/views/armored_cars/edit.html.erb
+++ b/app/views/armored_cars/edit.html.erb
@@ -1,7 +1,7 @@
 
 <h1>EDIT ARMORED-CARS</h1>
 <%= @car.inspect %>
-<%= simple_form_for [@armored_car] do |form| %>
+<%= simple_form_for [@car] do |form| %>
   <%= form.input :model %>
   <%= form.input :detailes %>
   <%= form.input :price_cents %>
