--- a/app/views/armored_cars/index.html.erb
+++ b/app/views/armored_cars/index.html.erb
@@ -10,7 +10,7 @@
   </thead>
 
   <tbody>
-    <% @armored_cars.each do |armored_car| %>
+    <% @cars.each do |armored_car| %>
       <tr>
         <td><%= armored_car.model %></td>
         <td><%= armored_car.detailes %></td>
