--- a/app/views/armored_cars/_form.html.erb
+++ b/app/views/armored_cars/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [@armored_car] do |form| %>
+<%= simple_form_for [@car] do |form| %>
   <%= form.input :model %>
   <%= form.input :detailes %>
   <%= form.input :price_cents %>
