--- a/app/views/armored_cars/new.html.erb
+++ b/app/views/armored_cars/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New ArmoredCar</h1>
 
-<%= simple_form_for [@armored_car] do |form| %>
+<%= simple_form_for [@car] do |form| %>
   <%= form.input :model %>
   <%= form.input :detailes %>
   <%= form.input :price_cents %>
