index booking fixed all cars

--- a/app/views/armored_cars/new.html.erb
+++ b/app/views/armored_cars/new.html.erb
@@ -6,5 +6,5 @@
   <%= form.input :price_cents %>
   <%= form.button :submit, class: "btn-primary" %>
 <% end %>
-<%= link_to 'Back', armored_cars_path %>
+<%= link_to 'back', armored_cars_path %>
 
