--- a/app/views/armored_cars/index.html.erb
+++ b/app/views/armored_cars/index.html.erb
@@ -2,11 +2,11 @@
   <div class="cards">
 
     <!-- Card Wider -->
-    <% @armored_cars.each do |armored_car| %>
+    <% @cars.each do |armored_car| %>
     <div class="hold-card card card-cascade">
       <!-- Card image -->
       <div class="view view-cascade overlay">
-        <%= image_tag "banana.jpg", class: "card-img-top" %>
+        <%= image_tag "ac1.jpg", class: "card-img-top" %>
       </div>
 
       <!-- Card content -->
