--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Rent Your Armored Car</h1>
+<br>
+<br>
+<%= link_to 'avaliable cars', armored_cars_path %><br><br>
+<%= link_to 'put your car to rent', new_armored_car_path %><br><br>
