--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,13 +13,13 @@
         <ul class="navbar-nav mr-auto">
             <% if user_signed_in? %>
             <li class="nav-item active">
-                <%= link_to "Home", "#", class: "nav-link" %>
+                <%= link_to "Home", "/", class: "nav-link" %>
             </li>
             <li class="nav-item">
-                <%= link_to "Dashboard", "#", class: "nav-link" %>
+                <%= link_to "Dashboard", current_user, class: "nav-link" %>
             </li>
             <li class="nav-item">
-                <%= link_to "My Bookings", "#", class: "nav-link" %>
+                <%= link_to "My Bookings", current_user, class: "nav-link" %>
             </li>
             <li class="nav-item">
                 <%= link_to "My Shit Stuffs", "#", class: "nav-link" %>
@@ -27,7 +27,7 @@
             <li class="nav-item dropdown">
                 <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                    <%= link_to "Action", "#", class: "dropdown-item" %>
+                    <%= link_to "Profile", current_user, class: "dropdown-item" %>
                     <%= link_to "Another action", "#", class: "dropdown-item" %>
                     <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
                 </div>
