--- a/app/views/armored_cars/show.html.erb
+++ b/app/views/armored_cars/show.html.erb
@@ -30,7 +30,11 @@
 
         <p class="text-muted"><%= @car.detailes %></p>
 
-        <a class="btn btn-brown btn-md ml-0" href="#" role="button">Book<i class="fa fa-book ml-2"></i></a>
+        <%= link_to new_armored_car_booking_path(@car), class: "btn btn-brown btn-md ml-0" do %>
+          Book <i class="fa fa-book ml-2"></i>
+        <% end %>
+
+
         <%= link_to 'Back', armored_cars_path, class: "btn btn-red btn-md ml-0"  %>
       </div>
       <!--Grid column-->
