--- a/app/views/armored_cars/index.html.erb
+++ b/app/views/armored_cars/index.html.erb
@@ -21,7 +21,9 @@
           <%= link_to armored_car.detailes, armored_car, class: "card-text" %>
         </p>
         <!-- Linkedin -->
-        <a class="px-2 fa-lg li-ic">Book<i class="fab fa-linkedin-in"></i></a>
+           <%= link_to armored_car, class: "px-2 fa-lg li-ic" do %>
+          choose <i class="fa fa-positive ml-2"></i>
+        <% end %>
 
       </div>
     </div>
