--- a/app/views/armored_cars/show.html.erb
+++ b/app/views/armored_cars/show.html.erb
@@ -30,6 +30,8 @@
 
         <p class="text-muted"><%= @car.detailes %></p>
 
+        <p class="text-muted"><%= @car.price_cents.to_d/100 %>$</p>
+
         <%= link_to new_armored_car_booking_path(@car), class: "btn btn-brown btn-md ml-0" do %>
           Book <i class="fa fa-book ml-2"></i>
         <% end %>
