--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -11,10 +11,11 @@
             <div class="col-md-12 mx-auto">
 
                 <!-- Content -->
-                <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Footer Content</h5>
-                <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-                    consectetur
-                    adipisicing elit.</p>
+                <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Armored Cars stay safe</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur Armored Cars adipisicing elit. Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Armored Cars Lorem ipsum dolor sit amet, consectetur adipisicing elit Armored Cars .
+                </p>
 
             </div>
 
