--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,12 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
+@media(max-width: 1600px) {
+    .cards {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
 @media(max-width: 1333px) {
     .cards {
         grid-template-columns: 1fr 1fr 1fr;
