--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,12 @@
 <h1>Rent Your Armored Car</h1>
 <br>
+<div class="col-md-12">
+  <!--Image-->
+  <div class="view overlay z-depth-1-half">
+    <%= link_to 'avaliable cars', armored_cars_path, class:"btn primary" %>
+    <%= link_to 'put your car to rent', new_armored_car_path, class:"btn secondary" %><br><br>
+
+
+  </div>
+</div>
 <br>
-<%= link_to 'avaliable cars', armored_cars_path %><br><br>
-<%= link_to 'put your car to rent', new_armored_car_path %><br><br>
