--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,16 @@
+<br>
 <h1>PROFILE</h1>
-
-<p>picture</p>
-
-<p>name: <%= current_user.name %></p>
-
-<p>id: <%= current_user.id %></p>
-
-<% @bookings.each do |bk| %>
-<h4>Booking</h4>
-car model: <%= bk.armored_car.model %><br>
-starts on day: <%= bk.starts_on %><br>
-ends on day: <%= bk.ends_on %><br>
-the total amount to be paid is: <%= bk.rent_price_cents.to_d/100 %>$<br>
-<% end %>
+<div class="col-md-12">
+    <p>name: <%= current_user.email %></p>
+    <!--Image-->
+    <div class="view overlay z-depth-1-half">
+        <% @bookings.each do |bk| %>
+        <h4>Booking</h4>
+        car model: <%= bk.armored_car.model %><br>
+        starts on day: <%= bk.starts_on %><br>
+        ends on day: <%= bk.ends_on %><br>
+        the total amount to be paid is: <%= bk.rent_price_cents.to_d/100 %>$<br>
+        <% end %>
+    </div>
+</div>
+<br>
