--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,10 +6,11 @@
 
 <p>id: <%= current_user.id %></p>
 
-<% @bookings.each do |bk| %>
+<% @bookings.each do |booking| %>
 <h4>Booking</h4>
-car model: <%= bk.armored_car.model %><br>
-starts on day: <%= bk.starts_on %><br>
-ends on day: <%= bk.ends_on %><br>
-the total amount to be paid is: <%= bk.rent_price_cents.to_d/100 %>$<br>
+car model: <%= booking.armored_car.model %><br>
+starts on day: <%= booking.starts_on %><br>
+ends on day: <%= booking.ends_on %><br>
+Days of rent: <%= booking.days_of_rent %><br>
+the total amount to be paid is: <%= number_to_currency(booking.total_price / 100.0) %><br>
 <% end %>
