--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,8 @@
 <div class="col-md-12">
   <!--Image-->
   <div class="view overlay z-depth-1-half">
-    <%= link_to 'avaliable cars', armored_cars_path, class:"btn primary" %>
-    <%= link_to 'put your car to rent', new_armored_car_path, class:"btn secondary" %><br><br>
+    <%= link_to 'avaliable cars', armored_cars_path, class: "btn btn-info waves-effect waves-light" %>
+    <%= link_to 'put your car to rent', new_armored_car_path, class:"btn btn-info waves-effect waves-light" %><br><br>
 
 
   </div>
