--- a/app/views/armored_cars/show.html.erb
+++ b/app/views/armored_cars/show.html.erb
@@ -32,12 +32,12 @@
 
         <p class="text-muted"><%= @car.price_cents.to_d/100 %>$</p>
 
-        <%= link_to new_armored_car_booking_path(@car), class: "btn btn-brown btn-md ml-0" do %>
+        <%= link_to new_armored_car_booking_path(@car), class: "btn btn-primary btn-md ml-0" do %>
           Book <i class="fa fa-book ml-2"></i>
         <% end %>
 
 
-        <%= link_to 'Back', armored_cars_path, class: "btn btn-red btn-md ml-0"  %>
+        <%= link_to 'Back', armored_cars_path, class: "btn btn-light btn-md ml-0"  %>
       </div>
       <!--Grid column-->
 
