add address to car fix visual error on bookings dashbord

--- a/app/views/armored_cars/new.html.erb
+++ b/app/views/armored_cars/new.html.erb
@@ -4,6 +4,7 @@
   <%= form.input :model %>
   <%= form.input :detailes %>
   <%= form.input :price_cents %>
+  <%= form.input :address %>
   <%= form.button :submit, class: "btn-primary" %>
 <% end %>
 <%= link_to 'back', armored_cars_path %>
