--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,11 +16,11 @@
 
 		<div class="row">
 
+			<% @bookings.each do |booking| %>
 			<div class="col-md-6">
 		    	<!--Image-->
-				<% @bookings.each do |booking| %>
-				<h4>Booking</h4>
-				car model: <%= booking.armored_car.model %><br>
+				<h4>Booking</h4><br>
+				<p>car model: <%= booking.armored_car.model %></p><br>
 				starts on day: <%= booking.starts_on %>
 				ends on day: <%= booking.ends_on %><br>
 				Days of rent: <%= booking.days_of_rent %><br>
@@ -33,7 +33,7 @@
 		        	src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/<%= booking.armored_car.address %>,16.45,0,0/300x300?access_token=pk.eyJ1IjoibWF2ZXJpY2thbnAiLCJhIjoiY2sycWx1MDdvMGdkdjNoazRvb3d3NTlxaCJ9.3_qqAnqwuqoCNmnhQUm1_Q"
 		      	/><br>
 		    </div>
-		        <% end %>
+		    <% end %>
 		</div>
 	</div>
 </div>
