adjust some structure to landing page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,7 @@
-<h1>Rent Your Armored Car</h1>
-<br>
-<div class="col-md-12">
-  <!--Image-->
-  <div class="view overlay z-depth-1-half">
-    <%= link_to 'avaliable cars', armored_cars_path, class: "btn btn-info waves-effect waves-light" %>
-    <%= link_to 'put your car to rent', new_armored_car_path, class:"btn btn-info waves-effect waves-light" %><br><br>
-
-
+<div class="banner">
+  <div class="banner-content text-center">
+    <h1>Protect your life: book an armored car!</h1>
+    <p>Armored Car provides your safety to protect people</p>
+    <%= link_to "Book now", armored_cars_path, class: "btn btn-lg btn-primary"  %>
   </div>
 </div>
-<br>
