--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,5 +3,6 @@
     <h1>Protect your life: book an armored car!</h1>
     <p>Armored Car provides your safety to protect people</p>
     <%= link_to "Book now", armored_cars_path, class: "btn btn-lg btn-primary"  %>
+    <%= link_to 'put your car to rent', new_armored_car_path, class:"btn secondary" %><br><br>
   </div>
 </div>
