--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,11 @@
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+@media(max-width: 2000px) {
+    .cards {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
 
 @media(max-width: 1700px) {
     .cards {
@@ -84,4 +89,8 @@
     -webkit-transition: .35s;
     transition: .35s;
     font-size: x-large;
+}
+
+.stylish-color-ac {
+    background-color: #2c3e50;
 }
