--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to "#", class: "navbar-brand" do %>
-  <p id="icon"
-    style="text-shadow: none; font-size: 80px; color: rgb(236, 240, 241); height: 108px; width: 108px; line-height: 108px; border-radius: 0%; text-align: center; background-color: rgb(44, 62, 80);">
-    AC </p>
+  <p id="icon"></p>
+  <!--img src="ac.svg" alt="Kiwi standing on oval"-->
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
