fix-seed-address

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,42 +1,45 @@
 
 <br>
 
-<div class="col-md-12">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-12">
+      	<p>id: <%= current_user.id %></p>
 
-	<p>id: <%= current_user.id %></p>
+      	<h1>PROFILE</h1>
 
-	<h1>PROFILE</h1>
+      	<p>picture</p>
 
-	<p>picture</p>
+      	<p>name: <%= current_user.name %></p>
 
-	<p>name: <%= current_user.name %></p>
+      	<p>name: <%= current_user.email %></p>
 
-	<p>name: <%= current_user.email %></p>
+      	<div class="view overlay z-depth-1-half">
 
-	<div class="view overlay z-depth-1-half">
+      		<div class="row">
 
-		<div class="row">
+      			<% @bookings.each do |booking| %>
+      			<div class="col-md-6">
+      		    	<!--Image-->
+      				<h4>Booking</h4><br>
 
-			<% @bookings.each do |booking| %>
-			<div class="col-md-6">
-		    	<!--Image-->
-				<h4>Booking</h4><br>
-
-				<p>car model: <%= booking.armored_car.model %></p><br>
-				starts on day: <%= booking.starts_on %>
-				ends on day: <%= booking.ends_on %><br>
-				Days of rent: <%= booking.days_of_rent %><br>
-				the total amount to be paid is: <%= number_to_currency(booking.total_price / 100.0) %><br>
-				<%= link_to 'cancel', armored_car_booking_path(booking),method: :delete, data: {confirm: 'are you sure' } %><br>
-		    </div>
-		    <div class="col-md-6">
-		    	<img
-		        	src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/<%= "#{booking.longitude},#{booking.latitude}" %>,16.45,0,0/300x300?access_token=<%= ENV['MAPBOX_API_KEY'] %>"
-		      	/><br>
-		    </div>
-		    <% end %>
-		</div>
-	</div>
-</div>
+      				<p>car model: <%= booking.armored_car.model %></p><br>
+      				starts on day: <%= booking.starts_on %>
+      				ends on day: <%= booking.ends_on %><br>
+      				Days of rent: <%= booking.days_of_rent %><br>
+      				the total amount to be paid is: <%= number_to_currency(booking.total_price / 100.0) %><br>
+      				<%= link_to 'cancel', armored_car_booking_path(booking),method: :delete, data: {confirm: 'are you sure' } %><br>
+      		    </div>
+      		    <div class="col-md-6">
+      		    	<img
+      		        	src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/<%= "#{booking.longitude},#{booking.latitude}" %>,16.45,0,0/300x300?access_token=<%= ENV['MAPBOX_API_KEY'] %>"
+      		      	/><br>
+      		    </div>
+      		    <% end %>
+      		</div>
+      	</div>
+      </div>
+    </div>
+  </div>
 <br>
 
