60-land60-landing-page-need-to-highlight-the-put-to-rent-a-car-button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="banner-content text-center">
     <h1>Protect your life: book an armored car!</h1>
     <p>Armored Car provides your safety to protect people</p>
-    <%= link_to "Book now", armored_cars_path, class: "btn btn-lg btn-primary"  %>
-    <%= link_to 'put your car to rent', new_armored_car_path, class:"btn secondary" %><br><br>
+    <%= link_to "Book An Armored Car now", armored_cars_path, class: "btn btn-lg btn-primary"  %>
+    <%= link_to 'Put Your Amored Car For Rent', new_armored_car_path, class:"btn btn-light" %><br><br>
   </div>
 </div>
