--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,13 +1,10 @@
 <!-- POST /armoredcars/1/bookings -->
 <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-sm-6">
-      <h1>Booking an armored_car</h1>
-      <%= simple_form_for [@armored_car, @booking] do |form| %>
-        <%= form.input :starts_on %>
-        <%= form.input :ends_on %>
-        <%= form.button :submit, class: "btn-primary" %>
-      <% end %>
-    </div>
+  <div class="form-wrapper" style="width: 400px; margin: 0 auto;">
+    <h1>Booking an armored_car</h1>
+    <%= simple_form_for [@armored_car, @booking] do |form| %>
+    <%= form.input :starts_on, as: :string, required: false, input_html: {class: "datepicker"} %>
+    <%= form.input :ends_on, as: :string, required: false, input_html: {class: "datepicker"} %>
+    <%= form.button :submit, class: "btn-primary" %> <% end %>
   </div>
 </div>
