--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -94,3 +94,15 @@
 .stylish-color-ac {
     background-color: #2c3e50;
 }
+
+.booking-title {
+    color: white;
+    opacity: .8;
+    font-size: 25px;
+    font-weight: lighter;
+    margin: 24px 0;
+}
+
+.new_booking{
+  margin-bottom: 24px;
+}
