--- a/app/views/armored_cars/show.html.erb
+++ b/app/views/armored_cars/show.html.erb
@@ -12,9 +12,11 @@
 
         <!--Image-->
         <div class="view overlay z-depth-1-half">
-          <img
-            src="https://images.unsplash.com/photo-1573570056742-d99fd0cb2307?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-            class="img-fluid" alt="">
+          <% if @car.image %>
+          <img class="img-fluid" src="<%= @car.image %>" alt="armored car">
+          <% else %>
+          <%= image_tag "ac1.jpeg", class: "img-fluid" %>
+          <% end %>
           <a href="#">
             <div class="mask rgba-white-light"></div>
           </a>
@@ -32,12 +34,12 @@
 
         <p class="text-muted"><%= @car.price_cents.to_d/100 %>$</p>
 
+        <%= link_to 'Back', armored_cars_path, class: "btn btn-light btn-md ml-0"  %>
         <%= link_to new_armored_car_booking_path(@car), class: "btn btn-primary btn-md ml-0" do %>
-          Book <i class="fa fa-book ml-2"></i>
+        Book <i class="fa fa-book ml-2"></i>
         <% end %>
 
 
-        <%= link_to 'Back', armored_cars_path, class: "btn btn-light btn-md ml-0"  %>
       </div>
       <!--Grid column-->
 
