--- a/app/views/armored_cars/index.html.erb
+++ b/app/views/armored_cars/index.html.erb
@@ -9,7 +9,8 @@
         <% if armored_car.image %>
         <img class="card-img-top" src="<%= armored_car.image %>" alt="armored car">
         <% else %>
-        <%= image_tag "ac1.jpeg", class: "card-img-top" %>
+                <img class="card-img-top" src="<%= armored_car.image %>" alt="armored car">
+
         <% end %>
       </div>
 
