enhanced profile page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -106,3 +106,44 @@
 .new_booking{
   margin-bottom: 24px;
 }
+
+
+.car-display-with-map {
+    margin: 5px;
+    padding: 15px;
+    color: #151965;
+
+}
+
+ h1 {
+        color: #151965;
+        font-weight: bold;
+        font-size: 45px;
+    }
+
+    p {
+        color: white;
+        opacity: .8;
+        font-size: 25px;
+        font-weight: lighter;
+        margin-bottom: 30px;
+    }
+
+
+    h2 {
+      color: #151965;
+      font-size: 36px;
+      font-weight: bolder;
+      margin-bottom: 30px;
+
+    }
+
+    h3 {
+      color: #151965;
+      opacity: .8;
+      font-size: 30px;
+      font-weight: bolder;
+      margin-bottom: 30px;
+
+    }
+
