--- a/app/views/armored_cars/_form.html.erb
+++ b/app/views/armored_cars/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [@car] do |form| %>
   <%= form.input :model %>
   <%= form.input :detailes %>
-  <%= form.input :price_cents %>
+  <%= form.input :price %>
   <%= form.button :submit, class: "btn-primary" %>
 <% end %>
