--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,14 +20,14 @@
 					<% @bookings.each do |booking| %>
 					<div class="col-md-6">
 						<!--Image-->
-						<h4>Booking</h4><br>
+						<h2>Booking</h2><br>
 
 						<p>car model: <%= booking.armored_car.model %></p><br>
-						starts on day: <%= booking.starts_on %>
-						ends on day: <%= booking.ends_on %><br>
-						Days of rent: <%= booking.days_of_rent %><br>
-						the total amount to be paid is: <%= number_to_currency(booking.total_price / 100.0) %><br>
-						<%= link_to 'cancel', armored_car_booking_path(booking),method: :delete, data: {confirm: 'are you sure' } %><br>
+						<p>starts on day: <%= booking.starts_on %></p>
+						<p>ends on day: <%= booking.ends_on %></p><br>
+						<p>Days of rent: <%= booking.days_of_rent %></p><br>
+						<p>the total amount to be paid is: <%= number_to_currency(booking.total_price / 100.0) %></p><br>
+					<%= link_to 'cancel', armored_car_booking_path(booking), class: "btn btn-light", method: :delete, data: {confirm: 'are you sure' } %><br>
 					</div>
 					<div class="col-md-6">
 						<img
@@ -36,12 +36,33 @@
 					<% end %>
 				</div>
 			</div>
-			<h1>My Cars</h1>
-			<% @own_cars.each do |car|  %>
-			<%=link_to car.model,armored_car_bookings_path(car)%>
-			<%=car.detailes%> <br>
-			<% end %>
-		</div>
-	</div>
-</div>
-<br>
+          	<h2>My Cars</h2><br>
+      <div class="car-display-with-map">
+              <div class="row justify-content-center">
+                  <table>
+                    <thead>
+                      <tr>
+                        <th><h3>Model</h3></th>
+                        <th><h3>Details</h3></th>
+                        <th colspan="3"></th>
+                      </tr>
+                    </thead>
+
+                    <tbody>
+                        <% @own_cars.each do |car|  %>
+
+                        <tr>
+                          <td><p><%=car.model%></p></td>
+                          <td><p><%=car.detailes%></p></td>
+                          <td><h3><%=link_to 'Current location' ,armored_car_bookings_path(car), class: "btn btn-light"%></h3></td>
+                        </tr>
+                      <% end %>
+                    </tbody>
+                  </table>
+                  <br>
+              </div>
+        		</div>
+        	</div>
+        </div>
+        <br>
+      </div>
