fix image not showing properly

--- a/app/views/armored_cars/_form.html.erb
+++ b/app/views/armored_cars/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for [@car] do |form| %>
-  <%= form.input :model %>
-  <%= form.input :detailes %>
-  <%= form.input :price %>
-  <%= form.button :submit, class: "btn-primary" %>
+<%= form.input :model %>
+<%= form.input :detailes %>
+<%= form.input :price %>
+<%= form.input :image %>
+<%= form.button :submit, class: "btn-primary" %>
 <% end %>
