--- a/app/views/armored_cars/index.html.erb
+++ b/app/views/armored_cars/index.html.erb
@@ -9,8 +9,7 @@
         <% if armored_car.image %>
         <img class="card-img-top" src="<%= armored_car.image %>" alt="armored car">
         <% else %>
-                <img class="card-img-top" src="<%= armored_car.image %>" alt="armored car">
-
+        <%= image_tag "default.png", class: "card-img-top" %>
         <% end %>
       </div>
 
