--- a/app/views/armored_cars/show.html.erb
+++ b/app/views/armored_cars/show.html.erb
@@ -15,7 +15,7 @@
           <% if @car.image %>
           <img class="img-fluid" src="<%= @car.image %>" alt="armored car">
           <% else %>
-          <%= image_tag "ac1.jpg", class: "img-fluid" %>
+          <%= image_tag "default.png", class: "img-fluid" %>
           <% end %>
           <a href="#">
             <div class="mask rgba-white-light"></div>
